deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-prometheus-demo
  namespace: spring-prom
  labels:
    app: spring-prometheus-demo
  annotations:
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-prometheus-demo
  template:
    metadata:
      labels:
        app: spring-prometheus-demo
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: spring-prometheus-demo
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "768Mi"
            cpu: "500m"
        #image: harbor.10.213.178.68.nip.io/kearos/spring-prometheus-demo@sha256:4d15c3bc9c92335f9e4bc0b11cb90a4f03a637674f2c621b74f6810a09d27354
        # image: harbor-registry/kearos/spring-prometheus-demo@sha256:4d15c3bc9c92335f9e4bc0b11cb90a4f03a637674f2c621b74f6810a09d27354
        #image: harbor-registry.tanzu-system-registry.svc.cluster.local/kearos/spring-prometheus-demo@sha256:4d15c3bc9c92335f9e4bc0b11cb90a4f03a637674f2c621b74f6810a09d27354
        image: joostvdgtanzu/spring-prometheus-demo:0.1.0-a
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: spring-prometheus-demo-service
  namespace: spring-prom
  labels:
    app: spring-prometheus-demo
spec:
  selector:
    app: spring-prometheus-demo
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080

# ---
# apiVersion: monitoring.coreos.com/v1
# kind: ServiceMonitor
# metadata:
#   name: spring-prometheus-demo-service-monitor
# spec:
#   selector:
#     matchLabels:
#       app: spring-prometheus-demo
#   endpoints:
#   - port: http-traffic
#     path: "/actuator/prometheus"

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: spring-prometheus-demo
  name: spring-prometheus-httpproxy
  namespace: spring-prom
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: spring-prometheus-demo-service
      port: 8080
  virtualhost:
    fqdn: springprom.10.213.178.68.nip.io
